syntax = "proto3";

service Production {
	rpc Produce(ProduceRequest) returns (ProduceResponse);
};

message ProduceRequest {
	string machineId = 1;
	int32 value = 2;
}

message ProduceResponse {
	bool  result = 1;
}